--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -1,30 +1,67 @@
-name: Publish Packages
+name: Auto Build and Release Plugin
+
 on:
-  workflow_dispatch:
-  release:
-    types: [created]
+  push:
+    branches: [ master, develop ]
 
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
+
+    outputs:
+      tag_name: ${{ steps.create_tag.outputs.tag_name }}
+
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Checkout latest code
-        uses: actions/checkout@v2
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: 21
+          java-version: '21'
 
-      - name: Change wrapper permissions
+      - name: Make Gradle executable
         run: chmod +x ./gradlew
 
-      - name: Publish package
-        uses: gradle/gradle-build-action@v2
+      - name: Build with Gradle
+        run: ./gradlew build
+
+      - name: Create Auto Tag
+        id: create_tag
+        run: |
+          TAG_NAME="${GITHUB_REF_NAME}-$(date +'%Y%m%d-%H%M%S')"
+          echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
+          git config user.name "${{ github.actor }}"
+          git config user.email "${{ github.actor }}@users.noreply.github.com"
+          git tag "$TAG_NAME"
+          git push origin "$TAG_NAME"
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK
+        uses: actions/setup-java@v3
         with:
-          arguments: publish
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Make Gradle executable
+        run: chmod +x ./gradlew
+
+      - name: Rebuild (optional, or use upload/download artifact)
+        run: ./gradlew build
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ needs.build.outputs.tag_name }}
+          name: "Release ${{ needs.build.outputs.tag_name }}"
+          files: build/libs/*.jar
         env:
-          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
-          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
